Started working on changing the country to a selection list. At the moment the user can select from a list of countries, but this is not being saved yet.

--- a/Yucca.Web/Components/Pages/Suppliers.razor
+++ b/Yucca.Web/Components/Pages/Suppliers.razor
@@ -1,4 +1,5 @@
 @page "/suppliers"
+@using Newtonsoft.Json
 @using Yucca.Inventory
 @using Yucca.Web.Services
 @using System.Timers
@@ -65,6 +66,7 @@ else
                 <tr>
                     <th scope="col" class="px-6 py-3">Name</th>
                     <th scope="col" class="px-6 py-3">City</th>
+                    <th scope="col" class="px-6 py-3">Country</th>
                     <th scope="col" class="px-6 py-3">Phone</th>
                     <th scope="col" class="px-6 py-3">Website</th>
                 </tr>
@@ -75,6 +77,7 @@ else
                         class="@(supplier.Id == _supplier?.Id ? "bg-blue-50 border-l-4 border-blue-500" : "bg-white border-b hover:bg-gray-50") cursor-pointer transition-all duration-200">
                         <td class="px-6 py-4 font-medium text-gray-900">@supplier.Name</td>
                         <td class="px-6 py-4">@supplier.City</td>
+                        <td class="px-6 py-4">@supplier.Country</td>
                         <td class="px-6 py-4">@supplier.ContactPhone</td>
                         <td class="px-6 py-4">@supplier.Website</td>
                     </tr>
@@ -84,98 +87,124 @@ else
     </div>
 }
 
-<h4 class="text-xl font-semibold mt-8 mb-4 text-gray-800">@(_isNewSupplier ? "Add Supplier" : "Edit Supplier")</h4>
-<form method="post" @onsubmit="SaveSupplier" @formname="supplier-form" class="bg-white shadow-md rounded-lg p-6 mb-6">
-    <AntiforgeryToken />
-    <div class="mb-4">
-        <label for="supplier-id" class="block text-gray-700 text-sm font-medium mb-1">ID:</label>
-        <InputText id="supplier-id" class="bg-gray-100 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5" @bind-Value="_supplier!.Id" type="text" readonly />
-    </div>
-    <div class="mb-4">
-        <label for="supplier-name" class="block text-gray-700 text-sm font-medium mb-1">Name:</label>
-        <InputText id="supplier-name" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.Name" type="text" />
-    </div>
-    <div class="mb-4">
-        <label for="supplier-address-line1" class="block text-gray-700 text-sm font-medium mb-1">Address Line 1:</label>
-        <InputText id="supplier-address-line1" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.AddressLine1" type="text" />
-    </div>    <div class="mb-4">
-        <label for="supplier-address-line2" class="block text-gray-700 text-sm font-medium mb-1">Address Line 2:</label>
-        <InputText id="supplier-address-line2" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.AddressLine2" type="text" />
-    </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+@if (_supplier != null)
+{
+    <h4 class="text-xl font-semibold mt-8 mb-4 text-gray-800">@(_isNewSupplier ? "Add Supplier" : "Edit Supplier")</h4>
+    <form method="post" @onsubmit="SaveSupplier" @formname="supplier-form" class="bg-white shadow-md rounded-lg p-6 mb-6">
+        <AntiforgeryToken />
         <div class="mb-4">
-            <label for="supplier-city" class="block text-gray-700 text-sm font-medium mb-1">City:</label>
-            <InputText id="supplier-city" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.City" type="text" />
+            <label for="supplier-id" class="block text-gray-700 text-sm font-medium mb-1">ID:</label>
+            <InputText id="supplier-id" class="bg-gray-100 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5" @bind-Value="_supplier!.Id" type="text" readonly />
         </div>
         <div class="mb-4">
-            <label for="supplier-state" class="block text-gray-700 text-sm font-medium mb-1">State:</label>
-            <InputText id="supplier-state" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.State" type="text" />
-        </div>
-    </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <div class="mb-4">
-            <label for="supplier-postcode" class="block text-gray-700 text-sm font-medium mb-1">Post Code:</label>
-            <InputText id="supplier-postcode" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.PostCode" type="text" />
+            <label for="supplier-name" class="block text-gray-700 text-sm font-medium mb-1">Name:</label>
+            <InputText id="supplier-name" class="@formElementStyle" @bind-Value="_supplier!.Name" type="text" />
         </div>
         <div class="mb-4">
-            <label for="supplier-country" class="block text-gray-700 text-sm font-medium mb-1">Country:</label>
-            <InputText id="supplier-country" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.Country" type="text" />
+            <label for="supplier-address-line1" class="block text-gray-700 text-sm font-medium mb-1">Address Line 1:</label>
+            <InputText id="supplier-address-line1" class="@formElementStyle" @bind-Value="_supplier!.AddressLine1" type="text" />
+        </div>    <div class="mb-4">
+            <label for="supplier-address-line2" class="block text-gray-700 text-sm font-medium mb-1">Address Line 2:</label>
+            <InputText id="supplier-address-line2" class="@formElementStyle" @bind-Value="_supplier!.AddressLine2" type="text" />
         </div>
-    </div>
-    <div class="mb-4">
-        <label for="supplier-contact-phone" class="block text-gray-700 text-sm font-medium mb-1">Contact Phone:</label>
-        <InputText id="supplier-contact-phone" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.ContactPhone" type="tel" />
-    </div>
-    <div class="mb-4">
-        <label for="supplier-email" class="block text-gray-700 text-sm font-medium mb-1">Email:</label>
-        <InputText id="supplier-email" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.Email" type="email" />
-    </div>
-    <div class="mb-4">
-        <label for="supplier-website" class="block text-gray-700 text-sm font-medium mb-1">Website:</label>
-        <InputText id="supplier-website" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.Website" type="url" />
-    </div>
-    <div class="mb-6">
-        <label for="supplier-tax-number" class="block text-gray-700 text-sm font-medium mb-1">Tax Number:</label>
-        <InputText id="supplier-tax-number" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" @bind-Value="_supplier!.TaxNumber" type="text" />
-    </div>    <div>
-        <button type="submit" class="inline-flex items-center px-5 py-2.5 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg text-sm transition-colors duration-200">
-            @if (_isNewSupplier)
-            {
-                <PlusIcon CssClass="w-4 h-4 mr-2" Size="16" />
-                <span>Add Supplier</span>
-            }
-            else
-            {
-                <span>Update Supplier</span>
-            }
-        </button>
-    </div>
-</form>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <div class="mb-4">
+                <label for="supplier-city" class="block text-gray-700 text-sm font-medium mb-1">City:</label>
+                <InputText id="supplier-city" class="@formElementStyle" @bind-Value="_supplier!.City" type="text" />
+            </div>
+            <div class="mb-4">
+                <label for="supplier-state" class="block text-gray-700 text-sm font-medium mb-1">State:</label>
+                <InputText id="supplier-state" class="@formElementStyle" @bind-Value="_supplier!.State" type="text" />
+            </div>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <div class="mb-4">
+                <label for="supplier-postcode" class="block text-gray-700 text-sm font-medium mb-1">Post Code:</label>
+                <InputText id="supplier-postcode" class="@formElementStyle" @bind-Value="_supplier!.PostCode" type="text" />
+            </div>
+            <div class="mb-4">
+                <label for="supplier-country" class="block text-gray-700 text-sm font-medium mb-1">Country:</label>
+                @if (_countries != null)
+                {
+                    <select id="supplier-country" class="@formElementStyle" @onchange="CountrySelected">
+                        @foreach (var country in _countries)
+                        {
+                            <option value="@country.IsoCode">@country.Name</option>
+                        }
+                    </select>
+                }
+                else
+                {
+                    <label>loading...</label>
+                }
+            </div>
+        </div>
+        <div class="mb-4">
+            <label for="supplier-contact-phone" class="block text-gray-700 text-sm font-medium mb-1">Contact Phone:</label>
+            <InputText id="supplier-contact-phone" class="@formElementStyle" @bind-Value="_supplier!.ContactPhone" type="tel" />
+        </div>
+        <div class="mb-4">
+            <label for="supplier-email" class="block text-gray-700 text-sm font-medium mb-1">Email:</label>
+            <InputText id="supplier-email" class="@formElementStyle" @bind-Value="_supplier!.Email" type="email" />
+        </div>
+        <div class="mb-4">
+            <label for="supplier-website" class="block text-gray-700 text-sm font-medium mb-1">Website:</label>
+            <InputText id="supplier-website" class="@formElementStyle" @bind-Value="_supplier!.Website" type="url" />
+        </div>
+        <div class="mb-6">
+            <label for="supplier-tax-number" class="block text-gray-700 text-sm font-medium mb-1">Tax Number:</label>
+            <InputText id="supplier-tax-number" class="@formElementStyle" @bind-Value="_supplier!.TaxNumber" type="text" />
+        </div>
+        <div>
+            <button type="submit" class="inline-flex items-center px-5 py-2.5 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg text-sm transition-colors duration-200">
+                @if (_isNewSupplier)
+                {
+                    <PlusIcon CssClass="w-4 h-4 mr-2" Size="16" />
+                    <span>Add Supplier</span>
+                }
+                else
+                {
+                    <span>Update Supplier</span>
+                }
+            </button>
+        </div>
+    </form>
+}
 
 @code {
     private List<Supplier>? _suppliers;
     private string _searchText = string.Empty;
     private Timer? _debounceTimer;
     private const int DebounceDelayMilliseconds = 500;
+    private string formElementStyle = "bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5";
 
     public void Dispose()
     {
         _debounceTimer?.Dispose();
-    }
-    
+    }    
 
     [SupplyParameterFromForm]
     private Supplier? _supplier { get; set; }
 
-    private bool _isNewSupplier = true;    protected override async Task OnInitializedAsync()
+    private List<Country> _countries;
+
+    private bool _isNewSupplier = true;
+
+    protected override async Task OnInitializedAsync()
     {
+        using (StreamReader r = new StreamReader("data/countries.json"))
+        {
+            string json = r.ReadToEnd();
+            _countries = JsonConvert.DeserializeObject<List<Country>>(json);
+        }
+
         _supplier ??= new();
         _debounceTimer = new Timer(DebounceDelayMilliseconds);
         _debounceTimer.AutoReset = false;
         _debounceTimer.Elapsed += async (sender, args) => await InvokeAsync(FilterSuppliers);
         await RefreshSupplierList();
     }
-    
+
     private async Task RefreshSupplierList()
     {
         await FilterSuppliers();
@@ -199,7 +228,7 @@ else
         _debounceTimer?.Stop();
         _debounceTimer?.Start();
     }
-    
+
     private async Task HandleKeyDown(Microsoft.AspNetCore.Components.Web.KeyboardEventArgs e)
     {
         if (e.Key == "Enter")
@@ -240,5 +269,10 @@ else
             await JSRuntime.InvokeVoidAsync("alert", "Update functionality not implemented yet");
         }
         StateHasChanged();
+    }
+
+    private void CountrySelected()
+    {
+        _supplier!.Country = new Country { Name = "Bob", IsoCode = "BB" };
     }
 }
